# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soulsgym"
version = "1.0.1"
description = "Gymnasium extension for DarkSouls III"
readme = "README.md"
authors = [{ name = "Martin Schuck", email = "real.amacati@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
keywords = ["gym", "reinforcement learning", "dark souls"]
dependencies = [
    "gymnasium >= 0.27.0",
    "mss >= 7.0.0",
    "numpy >= 1.21.0",
    "psutil >= 5.9.0",
    "Pymem >= 1.10.0; platform_system=='Windows'",
    "pywin32 >= 305.0; platform_system=='Windows'",
    "PyYAML >= 6.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/amacati/SoulsGym"
Documentation = "https://soulsgym.readthedocs.io/en/latest/"
Repository = "https://github.com/amacati/SoulsGym"

[tool.setuptools.package-data]
soulsgym = [
    "soulsgym/core/data/*.yaml",
    "soulsgym/core/speedhack/_C/*.dll",
    "soulsgym/envs/config/*.yaml",
]

[tool.yapf]
column_limit = 100
based_on_style = "google"
spaces_before_comment = 2
