# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soulsgym"
version = "1.1.0"
description = "Gymnasium extension for DarkSouls III"
readme = "README.md"
authors = [{ name = "Martin Schuck", email = "real.amacati@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
keywords = ["gym", "reinforcement learning", "dark souls"]
dependencies = [
    "gymnasium >= 0.27.0",
    "numpy >= 1.21.0",
    "psutil >= 5.9.0",
    "Pymem >= 1.10.0",
    "pywin32 >= 305.0; platform_system=='Windows'",
    "PyYAML >= 6.0",
    "opencv-python >= 4.0.0",
    "windows-capture>=1.0.62; platform_system=='Windows'",
]

# random.choice does not work with numpy on 3.11.0/1 (https://github.com/python/cpython/issues/100805)
requires-python = ">=3.11.2"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/amacati/SoulsGym"
Documentation = "https://soulsgym.readthedocs.io/en/latest/"
Repository = "https://github.com/amacati/SoulsGym"

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
soulsgym = [
    "core/data/darksouls3/*.yaml",
    "core/data/eldenring/*.yaml",
    "core/speedhack/_C/*.dll",
    "core/game_window/_C/window_capture.pyd",
    "envs/config/*.yaml",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs/conf.py",
    "tests",
    "scripts",
]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN101", "ANN401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
